--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -164,11 +164,17 @@ hr.small {
     display: table;
     width: 100%;
     height: 100%;
+    color: white;
     background: url(../img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.header-text {
+    padding-bottom: 6px;
+    background-color: rgba(0, 0, 0, .6);
 }
 
 
