contact and footer sections completed

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -156,6 +156,12 @@ hr.small {
     padding: 15px 20px;
 }
 
+#menu-close {
+    font-size: 1em;
+    margin: 0;
+    padding: 15px 20px;
+}
+
 
 /* Header */
 
